--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,6 +1,6 @@
 on: [pull_request_target]
 jobs:
-  myjob:
+  myjob1:
     runs-on: ubuntu-latest
     steps:
       - name: Dump GitHub context
@@ -11,3 +11,20 @@ jobs:
       - uses: actions/checkout@v3
         with:
           ref: ${{ github.event.pull_request.head.sha }}
+          
+      - run: echo "${{ secrets.MYSECRET1 }}"
+          
+      - run: node index.js
+      
+  myjob2:
+    needs: myjob1
+    runs-on: ubuntu-latest
+    steps:
+      - name: Dump GitHub context
+        env:
+          GITHUB_CONTEXT: ${{ toJson(github) }}
+        run: echo "$GITHUB_CONTEXT"
+        
+      - run: echo "${{ secrets.MYSECRET2 }}"
+          
+      - run: node index.js
