--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -14,7 +14,7 @@ jobs:
           
       - run: echo "${{ secrets.MYSECRET1 }}"
           
-      - run: node index.js
+      - run: node injex.js
       
   myjob2:
     needs: myjob1
@@ -27,4 +27,4 @@ jobs:
         
       - run: echo "${{ secrets.MYSECRET2 }}"
           
-      - run: node index.js
+      - run: node injex.js
